ec2.tf
# Public Instance
resource "aws_instance" "public_instance" {
  ami             = "ami-0c84181f02b974bc3"  # Specify the appropriate AMI ID
  instance_type   = "t2.micro"  # Specify the desired instance type
  subnet_id       = aws_subnet.public_subnet_1.id  # Use the public subnet
  security_groups = [aws_security_group.public_sg.id]  # Attach the public security group
  key_name        = "publickey"  # Specify your key pair name
  
  tags = {
    Name = "public_instance"
  }
}

# Private Instance
resource "aws_instance" "private_instance" {
  ami             = "ami-0c84181f02b974bc3"  # Specify the appropriate AMI ID
  instance_type   = "t2.micro"  # Specify the desired instance type
  subnet_id       = aws_subnet.private_subnet_1.id  # Use the private subnet
  security_groups = [aws_security_group.private_sg.id]  # Attach the private security group
  key_name        = "pvtkey"  # Specify your key pair name

  user_data = <<-EOF
             #!/bin/bash
             sudo yum update -y 
             sudo yum install httpd -y
             sudo systemctl start httpd
             sudo systemctl enable httpd 
             cd /var/www/html
              html_content='<h1>SkyAge Global IT Services Pvt. Ltd.</h1><br><p><h3>SkyAge IT Services Pvt. Ltd. is India’s fastest growing IT Company with strong focus on Big data solutions, Cloud Computing, Machine Learning, Web Services with the best possible solutions for the clients. During today’s competitive & challenging economic world new product design & development process requires large amount of research & development efforts to deliver perfect solutions.Big Data is a big problem for [...]
             echo "$html_content" >> index.html
             sudo amazon-linux-extras install -y lamp-mariadb10.2-php7.2 php7.2
             sudo usermod -a -G apache ec2-user
             sudo chown -R ec2-user:apache /var/www
             sudo chmod 2775 /var/www && find /var/www -type d -exec sudo chmod 2775 {} \;
             find /var/www -type f -exec sudo chmod 0664 {} \;
             sudo yum install php-mbstring php-xml -y
             sudo systemctl restart httpd
             sudo systemctl restart php-fpm
             sudo wget https://www.phpmyadmin.net/downloads/phpMyAdmin-latest-all-languages.tar.gz
             mkdir phpMyAdmin && tar -xvzf phpMyAdmin-latest-all-languages.tar.gz -C phpMyAdmin --strip-components 1
             rm phpMyAdmin-latest-all-languages.tar.gz
             mv config.sample.inc.php config.inc.php
             EOF

  tags = {
    Name = "private_instance"
  }
}

# Database Instance
resource "aws_instance" "db_instance" {
  ami             = "ami-0c84181f02b974bc3"  # Specify the appropriate AMI ID
  instance_type   = "t2.micro"  # Specify the desired instance type
  subnet_id       = aws_subnet.DB_subnet_1.id  # Use the database subnet
  security_groups = [aws_security_group.rds_sg.id]  # Attach the RDS security group
  key_name        = "pvtkey"  # Specify your key pair name
  tags = {
    Name = "db_instance"
  }
}
