secgrp.tf
#SG FOR SERVER
resource "aws_security_group" "project-sg" {
  name        = "project-sg"
  description = "Allow port 22 from anywhere"
  vpc_id = aws_vpc.project_vpc.id 
  
  ingress {
    description      = "Allow port 22 from anywhere"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

  ingress {
    description      = "Allow port 80 from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

  ingress {
    description      = "Allow port 443 from anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }

  egress {
    description      = "Allow all"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}

#SG FOR ALB
resource "aws_security_group" "alb-sg" {
  name        = "alb-sg"
  description = "Allow port 80 and 443 from anywhere"
  vpc_id      = aws_vpc.project_vpc.id
  tags = {
    Name = "sg-project-alb"
} 
  ingress {
    description      = "Allow port 80 from anywhere"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }
  
  ingress {
    description      = "Allow port 443 from anywhere"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    }
  
  egress {
    description      = "Allow all"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }
}
